src/test/deca/syntax/invalid/readInt_with_arg.deca

// Description :
// readInt ne prend pas d'argument
//
// Resultats :
// Erreur syntaxique
// mismatched input '1'
// Regle : primary_expr : READINT '(' ')'
//

{
    x = readInt(1);
}